[package]
name = "rlutilities"
version = "0.1.3"
edition = "2021"
publish = false
exclude = [".gitignore", ".gitmodules", "extras/", ".github/", "tests/", "python/", "extern/", "messages/", "RLUtilities-cpp/assets", ".editorconfig", "CMakeLists.txt", ".vimrc"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.23.1"
cxx = { version = "1.0.83", features = ["c++17"] }
pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }

[build-dependencies]
glob = "0.3.0"
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"] }

[profile.release]
lto = true
strip = true
panic = "abort"
