[package]
name = "rlutilities_rs"
version = "0.2.0"
edition = "2021"
publish = false
exclude = [".gitignore", ".gitmodules", "extras/", ".github/", "tests/", "extern/", "messages/", "RLUtilities-cpp/assets", ".editorconfig", "CMakeLists.txt", ".vimrc", "examples/", "rustfmt.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.25.0"
cxx = { version = "1.0.83", features = ["c++17"] }

[build-dependencies]
glob = "0.3.0"
autocxx-build = "0.25.0"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
once_cell = "1.17.1"

[profile.release]
lto = true
strip = true
panic = "abort"
